# opengl-courses

./: CMakeLists.txt  Lighting_Dir.cpp  Lighting_Materials.cpp  Lighting_Multiple.cpp  Lighting_Spot.cpp  README.md  helper.txt  main.cpp  opengl_progression_guide.md
include/: Camera.h  Texture2D.h
models/: bags.mtl  barrel.mtl  bowling_pin.mtl  building.mtl  bunny.mtl  crate.mtl  energetic.mtl  fence.mtl  ferris.mtl  fire_barrel.mtl  ground.mtl  helmet.mtl  light.mtl  mattress.mtl  pirozhok.mtl  sign.mtl  woodcrate.mtl
shaders/: basic.frag  basic.vert  lighting_dir.frag
src/: Texture2D.cpp
